# c-snake

./: CMakeLists.txt  README.md  snake.c  snake.h
cmake_modules/: FindSDL2.cmake
